--- a/pages/static/style.css
+++ b/pages/static/style.css
@@ -62,3 +62,19 @@ input[type="submit"] {
   margin: 10px auto;
   transition: opacity 0.2s ease 0s, transform 0.2s ease 0s;
 }
+
+#error-box {
+  display: none;
+  background:#ff000050;
+  border: 2px solid red;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+#error-title {
+  font-weight: bold;
+  font-size: 16px;
+  margin: 0;
+}
+
+#error-message { margin: 3px 0 }
